plugins/xpath/xpath-lang/testData/xpath2/highlighting/plusOperatorNotApplicable.xpath2
<error descr="Operator '+' cannot be applied to expressions of type 'xs:string'">'55' + 1</error>